Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89835

qdoc: Group links missing from the navigation bar

    XMLWordPrintable

Details

    • 2
    • 3fecac735ff94b0184a054b542cc1070fc0597ca (qt/qttools/6.0) 228be3bd697a70a31c26c26d6d21d7bd0aebceda (qt/qttools/dev) ab7537e384041bce22aac28821b48fe5d6c867f1 (qt/tqtc-qttools/tqtc/lts-5.15)
    • Da Vinci sprint 25

    Description

      If a \page has a single \ingroup command, the page navigation bar is supposed to include a link to that group page.

      Attachments

        For Gerrit Dashboard: QTBUG-89835
        # Subject Branch Project Status CR V

        Activity

          People

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes